# framework

./: README.md  pyproject.toml
framework/: __init__.py
framework/agents/: __init__.py  base.py  scraper.py
framework/browsers/: __init__.py  base.py  playwright.py
framework/providers/: __init__.py  base.py
framework/tools/: __init__.py  base.py  extraction.py  interaction.py  navigation.py
framework/utils/: memory.py
tests/: __init__.py  test_client.py
